@@ -1,5 +1,10 @@
 2005-11-23  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-metadata-musicbrainz.c:
+	Handle track data imported from FreeDB (#155425, Bastien Nocera)
+
+2005-11-23  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.desktop.in:
 	Add generic name (#322161, Matthias Clasen)
 
